--- a/client/src/components/NewSession/NewSession.css
+++ b/client/src/components/NewSession/NewSession.css
@@ -47,7 +47,7 @@
   border-radius: 5px;
   border-style: none;
   border: 2px solid rgb(0, 0, 0, 0.5);
-  background: transparent;
+  background: rgb(255, 255, 255, 0.1);
   font-size: 20px;
   bottom: 20px;
   position: relative;
@@ -59,7 +59,7 @@
 }
 
 .date-value {
-  width: 95px;
+  width: 111px;
   height: 16px;
   position: relative;
   bottom: 15px;
@@ -69,7 +69,7 @@
   border: 2px solid rgb(0, 0, 0, 0.5);
   cursor: pointer;
   font-family: 'oswald';
-
+  right: 11px;
 }
 
 .movement {
@@ -82,12 +82,13 @@
     "W E T T"
     "S P T T";
 
-    border: 2px solid rgb(0, 0, 0, 0.5);
+    /* border: 2px solid rgb(0, 0, 0, 0.5); */
     border-radius: 5px;
     margin-right: 25px;
     margin-left: 25px;
     height: 130px;
     margin-top: -5px;
+    background-color: rgb(255, 255, 255, 0.1);
 }
 
 .movement-name {
@@ -163,7 +164,7 @@
 
 .notes {
   grid-area: T;
-  width: 144px;
+  width: 150px;
   height: 100px;
   border-radius: 5px;
   border: 2px solid rgb(0, 0, 0, 0.5);
@@ -194,6 +195,10 @@
   cursor: pointer;
 }
 
+.send-session:hover {
+  background-color: rgb(255, 255, 255, 0.3);
+}
+
 .cancel-session {
   height: 25px;
   width: 75px;
@@ -207,7 +212,9 @@
   cursor: pointer;
 }
 
-
+.cancel-session:hover {
+  background-color: rgb(255, 255, 255, 0.3);
+}
 
 
 
