--- a/client/src/components/HomePage/HomePage.css
+++ b/client/src/components/HomePage/HomePage.css
@@ -28,7 +28,7 @@
   width: 40px;
   border-radius: 5px;
   background: transparent;
-  transition: transform .2s
+  transition: transform .5s
 }
 
 .circle:hover {
@@ -67,6 +67,12 @@
   color: white;
   border-radius: 10px;
   flex: 1;
+  transition: transform .5s;
+}
+
+.sesh-div:hover {
+  transform: scale(1.1);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 .sesh-name {
