--- a/client/src/components/NewSession/NewSession.css
+++ b/client/src/components/NewSession/NewSession.css
@@ -7,7 +7,7 @@
   background-color: #343434;
   margin: auto;
   border-radius: 10px;
-  top: 200px;
+  top: 150px;
   position: relative;
   height: 500px;
   display: grid;
@@ -17,6 +17,7 @@
     "N N N N"
     "A A D D"
     "M M M M";
+    box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 15px;
 }
 
 .name {
@@ -35,6 +36,8 @@
   text-align: center;
   color: white;
   font-family: 'oswald';
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-style: none;
 }
 
 .add-a-movement {
@@ -46,12 +49,19 @@
   height: 28px;
   border-radius: 5px;
   border-style: none;
-  border: 2px solid rgb(0, 0, 0, 0.5);
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   background: rgb(255, 255, 255, 0.1);
   font-size: 20px;
   bottom: 20px;
   position: relative;
   cursor: pointer;
+  color: white;
+  transition: transform .5s;
+}
+
+.add-a-movement button:hover{
+  transform: scale(0.7);
 }
 
 .date {
@@ -63,13 +73,12 @@
   height: 16px;
   position: relative;
   bottom: 15px;
-  border-radius: 5px;
-  border-style: none;
-  background: rgb(255, 255, 255, 0.1);
-  border: 2px solid rgb(0, 0, 0, 0.5);
+  border: none;
+  background: transparent;
   cursor: pointer;
   font-family: 'oswald';
   right: 11px;
+  color: white;
 }
 
 .movement {
@@ -81,23 +90,23 @@
     "V V T T"
     "W E T T"
     "S P T T";
-
-    /* border: 2px solid rgb(0, 0, 0, 0.5); */
     border-radius: 5px;
     margin-right: 25px;
     margin-left: 25px;
     height: 130px;
     margin-top: -5px;
     background-color: rgb(255, 255, 255, 0.1);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .movement-name {
   grid-area: V;
   height: 20px;
   width: 144px;
+  border: none;
   border-radius: 5px;
-  border: 2px solid rgb(0, 0, 0, 0.5);
-  background: rgb(255, 255, 255, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  background: transparent;
   text-align: center;
   margin: 5px;
   margin-top: 10px;
@@ -110,9 +119,10 @@
   grid-area: W;
   width: 50px;
   height: 25px;
+  border: none;
   border-radius: 5px;
-  border: 2px solid rgb(0, 0, 0, 0.5);
-  background: rgb(255, 255, 255, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  background: transparent;
   text-align: center;
   margin: 5px;
   margin-left: 10px;
@@ -124,9 +134,10 @@
   grid-area: E;
   height: 25px;
   width: 50px;
+  border: none;
   border-radius: 5px;
-  border: 2px solid rgb(0, 0, 0, 0.5);
-  background: rgb(255, 255, 255, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  background: transparent;
   text-align: center;
   margin: 5px;
   margin-left: 29px;
@@ -138,9 +149,10 @@
   grid-area: P;
   width: 50px;
   height: 25px;
+  border: none;
   border-radius: 5px;
-  border: 2px solid rgb(0, 0, 0, 0.5);
-  background: rgb(255, 255, 255, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  background: transparent;
   text-align: center;
   margin: 5px;
   margin-left: 29px;
@@ -152,9 +164,10 @@
   grid-area: S;
   height: 25px;
   width: 50px;
+  border: none;
   border-radius: 5px;
-  border: 2px solid rgb(0, 0, 0, 0.5);
-  background: rgb(255, 255, 255, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  background: transparent;
   text-align: center;
   margin: 5px;
   margin-left: 10px;
@@ -167,8 +180,9 @@
   width: 150px;
   height: 100px;
   border-radius: 5px;
-  border: 2px solid rgb(0, 0, 0, 0.5);
-  background: rgb(255, 255, 255, 0.1);
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  background: transparent;
   text-align: center;
   margin: 5px;
   margin-top: 10px;
