--- a/client/src/components/NewSession/NewSession.css
+++ b/client/src/components/NewSession/NewSession.css
@@ -42,6 +42,10 @@
    
 }
 
+.move2 {
+  grid-area: Y;
+}
+
 .name {
   grid-area: N;
   border-bottom: 2px solid rgb(0, 0, 0, 0.3);
@@ -122,6 +126,11 @@
     margin-top: 10px;
     background-color: rgb(255, 255, 255, 0.1);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+#move2 {
+  position: relative;
+  top: 150px;
 }
 
 .movement-name {
