--- a/client/src/components/NewSession/NewSession.css
+++ b/client/src/components/NewSession/NewSession.css
@@ -110,6 +110,19 @@
   color: white;
 }
 
+.single-date-value {
+  width: 111px;
+  height: 16px;
+  position: relative;
+  bottom: 15px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  font-family: 'oswald';
+  right: 75px;
+  color: white;
+}
+
 .movement {
   display: grid;
   grid-area: Z;
