--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,4 +6,14 @@ body {
   text-align: center;
 }
 
+.footer {
+  position: absolute;
+  bottom: 0px;
+  margin: auto;
+  right: 0;
+  left: 0;
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+
 
