--- a/client/src/components/NewSession/NewSession.css
+++ b/client/src/components/NewSession/NewSession.css
@@ -67,7 +67,6 @@
   height: 28px;
   border-radius: 5px;
   border-style: none;
-  border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   background: transparent;
   font-size: 20px;
@@ -81,6 +80,20 @@
 .add-a-movement button:hover{
   transform: scale(1.1);
   background-color: rgb(255, 255, 255, 0.1)
+}
+
+.remove-movement {
+  margin: auto;
+  position: relative;
+  bottom: 10px;
+  width: 60px;
+  right: 30px;
+  border-radius: 5px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  background: transparent;
+  font-size: 12px;
+  color: white;
 }
 
 .date {
@@ -125,7 +138,7 @@
     border-radius: 5px;
     margin-right: 10px;
     margin-left: 10px;
-    height: 130px;
+    height: 150px;
     margin-top: 10px;
     background-color: rgb(255, 255, 255, 0.1);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -147,7 +160,7 @@
   text-align: center;
   margin: 5px;
   margin-top: 10px;
-  margin-left: 10px;
+  margin-left: 20px;
   color: white;
   font-family: 'oswald';
 }
@@ -162,7 +175,7 @@
   background: transparent;
   text-align: center;
   margin: 5px;
-  margin-left: 10px;
+  margin-left: 20px;
   color: white;
   font-family: 'oswald';
 }
@@ -177,7 +190,7 @@
   background: transparent;
   text-align: center;
   margin: 5px;
-  margin-left: 29px;
+  margin-left: 39px;
   color: white;
   font-family: 'oswald';
 }
@@ -192,7 +205,8 @@
   background: transparent;
   text-align: center;
   margin: 5px;
-  margin-left: 29px;
+  margin-left: 39px;
+  margin-top: 13px;
   color: white;
   font-family: 'oswald';
 }
@@ -207,7 +221,8 @@
   background: transparent;
   text-align: center;
   margin: 5px;
-  margin-left: 10px;
+  margin-left: 20px;
+  margin-top: 13px;
   color: white;
   font-family: 'oswald';
 }
@@ -223,6 +238,7 @@
   text-align: center;
   margin: 5px;
   margin-top: 10px;
+  margin-left: 10px;
   resize: none;
   color: white;
   font-family: 'oswald';
@@ -249,6 +265,7 @@
   font-family: 'oswald';
   cursor: pointer;
   transition: transform .5s;
+  text-decoration: none;
 }
 
 .send-session:hover {
