--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,13 +4,14 @@ body {
 
 .App {
   text-align: center;
+  position: relative;
+  min-height: 100vh;
 }
 
 @media (max-width: 600px) {
   .logo {
     max-width: 100px;
     max-height: 100px;
-    /* margin-top: 25px; */
   } 
 
   .add {
