--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,9 +1,9 @@
 .footer {
   bottom: 0px;
-  margin: auto;
   right: 0;
   left: 0;
-  margin-bottom: 10px;
-  margin-top: 10px;
   font-size: 15px;
+  position: absolute;
+  margin-bottom: -50px;
 }
+
